This file documents the revision history for mod_gearman.

1.0.10 Thu Aug 25 16:07:55 CEST 2011
          - new option 'show_error_output' for worker
          - fixed failed job when host+service > 64 chars
          - fixed tests

1.0.9  Mon Aug 15 16:05:23 CEST 2011
          - nicer error messages for send_multi when zero results transmitted
          - fixed sigsegv when reloading core in combination with exports options
          - added optional workaround for plugins exiting with rc 25 because
            of duplicate execution
          - removed version output to stderr while reloading/starting the core
          - check server definition for duplicates
          - replace died workers to maintain the worker population
          - better timeout handling when using fork_on_exec=off

1.0.8  Fri Jul 22 22:21:34 CEST 2011
          - use identifier for error messages if set
          - fixed ld options (fixes debian bug #632431) thanks Ilya Barygin
          - fixed memory leak in gearman_top
          - fixed memory leak when reloading neb module

1.0.7  Sun Jul  3 15:18:16 CEST 2011
          - show plugin output for exit codes > 3
          - fixed send_multi timestamps when client clock is screwed
          - fixed send_multi for libgearman > 0.14

1.0.6  Sat Jun  4 11:47:02 CEST 2011
          - expand server definitions from :4730 to localhost:4730
          - fixed latency calculation (was below zero sometimes)

1.0.5  Tue May 17 17:46:36 CEST 2011
          - added dupserver option to send_gearman and send_multi too
          - removed warning for the passive only mode

1.0.4  Sun Apr 17 17:58:47 CEST 2011
          - added generic logger
            - enables logging to stdout, file, syslog or nagios
          - changed latency calculation (use time of next_check instead of time of job submission)
          - added nsca replacements docs

1.0.3  Wed Mar 23 21:53:09 CET 2011
          - fixed worker handling exit codes > 127
